# phasmo-helper

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  publish.yml
.tauri/: phasmo-helper.key.pub
src/: App.css  App.tsx  Layout.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: app-sidebar.tsx  backend-error-listener.tsx  chart-area-interactive.tsx  game-timers.tsx  ghost-card.tsx  ghost-speed-calculator.tsx  how-do-you.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  phasmo-logo.tsx  section-cards.tsx  show-info.tsx  site-header.tsx  theme-provider.tsx  timer-sound-player.tsx  updater.tsx  window-controls.tsx  window-titlebar.tsx
src/components/config/: config-form.tsx  keybind-config.tsx  overlay-config.tsx  theme-config.tsx  timer-config.tsx
src/components/ui/: audio-player.tsx
src/config/: README.md  navigation.tsx
src/contexts/: config-context.tsx  ghost-context.tsx  navigation-context.tsx
src/hooks/: use-config.ts  use-game.ts  use-ghost.ts  use-keybinds.ts
src/lib/: events.ts  game-tracker.ts  storeLoader.ts
src/pages/: about.tsx  config.tsx  games.tsx  ghosts.tsx
src/stores/: config-store.ts  game-store.ts  ghost-store.ts  navigation-store.ts  timer-store.ts
src/styles/: titlebar.css
src/types/: ghost-schema.ts
